# ALR3D

./: Cargo.toml  README.md
examples/common/: transforms.rs  vertex_data.rs
examples/step01/: test01.rs  test02.rs
examples/step02/: common.rs  first_triangle.rs  first_triangle.wgsl  triangle_vertex_color.rs  triangle_vertex_color.wgsl
examples/step03/: point_line.rs  point_line.wgsl  triangles.rs  triangles.wgsl
examples/step04/: square.rs  square_index.rs  triangle.rs
examples/step05/: rotation.rs  scaling.rs  translation.rs  view_projection.rs
examples/step06/: camera.rs  camera_control.rs  cube_face_color.rs  cube_face_color.wgsl  cube_vertex_color.rs  line3d.rs  line3d.wgsl  rotate_cube.rs
